[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Scripting/Scripting.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Player/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Menu/DeathScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Entity/Teleporter.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/GUI/GUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Menu/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Levels/Base/GridEffect.gd" type="Script" id=8]
[ext_resource path="res://src/Levels/Base/EventSequencer.gd" type="Script" id=9]
[ext_resource path="res://src/Levels/Base/LevelBase.gd" type="Script" id=10]

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

const vec2 center = vec2(0.5, 0.5);
uniform float radius : hint_range(0.0, 1.0, 0.001) = 0.0;
uniform float feather = 0.135;
uniform float width = 0.04;
uniform float strength = 0.08;
uniform float aberration = 0.425;

void fragment() {
	vec2 uv = SCREEN_UV;
	
	float aspect_ratio = SCREEN_PIXEL_SIZE.y / SCREEN_PIXEL_SIZE.x;
	vec2 scaled_uv = (uv - vec2(0.0, 0.5)) / vec2(1.0, aspect_ratio) + vec2(0, 0.5); 
	vec2 dist_center = scaled_uv - center;
	float outer_mask = (1.0 - smoothstep(radius - feather, radius, length(dist_center)));
	float mask = outer_mask * smoothstep(radius - width - feather, radius - width , length(dist_center));
	vec2 offset = normalize(dist_center) * strength * mask;
	vec2 biased_uv = scaled_uv - offset;
	vec2 shockwave_uv = uv * (1.0 - mask) + biased_uv * mask;
	
	vec4 color = texture(SCREEN_TEXTURE, shockwave_uv);
	
	float avg = (color.r + color.g + color.b) / 3.0;
	color = mix(vec4(avg, avg, avg, color.a), vec4(0.0, 0.0, 1.0, color.a), 0.4);
	color.b += min(step((sin((shockwave_uv.x / SCREEN_PIXEL_SIZE.x) * 0.5) / 2.0) + 0.5, 0.1) + step((sin((shockwave_uv.y / SCREEN_PIXEL_SIZE.y) * 0.5) / 2.0) + 0.5, 0.1), 1.0) * 0.1;
	
	color.a = outer_mask;
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 11 )
shader_param/radius = 0.0
shader_param/feather = 0.135
shader_param/width = 0.04
shader_param/strength = 0.08
shader_param/aberration = 0.425

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("GridEffect/ColorRect:material:shader_param/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "Shockwave"
tracks/0/type = "bezier"
tracks/0/path = NodePath("GridEffect/ColorRect:material:shader_param/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0, 0.8, 0.303626, 1, 0, -0.205002, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="LevelBase" type="Node"]
script = ExtResource( 10 )

[node name="Camera" parent="." instance=ExtResource( 2 )]
position = Vector2( 480, 264 )
target_path = NodePath("../Entities/YSort/Player")

[node name="Entities" type="Node2D" parent="."]

[node name="YSort" type="YSort" parent="Entities"]
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="Entities/YSort" instance=ExtResource( 5 )]
position = Vector2( 480, 264 )

[node name="Teleporter" parent="Entities/YSort" instance=ExtResource( 4 )]
visible = false
blocked = true

[node name="IntroEvents" type="Node" parent="."]
script = ExtResource( 9 )

[node name="SavedEvents" type="Node" parent="."]
script = ExtResource( 9 )

[node name="CompletedEvents" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -10
follow_viewport_enable = true

[node name="ScriptingEffect" type="CanvasLayer" parent="."]
layer = -10

[node name="GridEffect" type="Control" parent="ScriptingEffect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="ScriptingEffect/GridEffect"]
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScriptingEffect/GridEffect"]
root_node = NodePath("../..")
playback_speed = 3.0
anims/RESET = SubResource( 4 )
anims/Shockwave = SubResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="GUI" parent="UI" instance=ExtResource( 6 )]
__meta__ = {
"_edit_lock_": true
}

[node name="Scripting" parent="UI" instance=ExtResource( 1 )]
__meta__ = {
"_edit_lock_": true
}

[node name="DeathScene" parent="UI" instance=ExtResource( 3 )]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="PauseMenu" parent="UI" instance=ExtResource( 7 )]
visible = false
__meta__ = {
"_edit_lock_": true
}
